Fixes to hero image distortion on load

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
@@ -175,6 +175,8 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
+		height: 100%;
+		width: 100%;
 		z-index: 3;
 		mix-blend-mode: multiply;
 		opacity: 0.8;
@@ -257,6 +259,7 @@ figure {
 	object-fit: cover;
 	position: absolute;
 	z-index: 1;
+	display: block; // added to stop flexbox messing with the height on load.
 }
 
 // apply to content inside
